--- a/APP/Tpl/header.html
+++ b/APP/Tpl/header.html
@@ -53,7 +53,7 @@
             	<!-- 头像模块 -->
                 <if condition="$visitor">
                 <li class="dropdown" >
-                    <a style="padding:5px 10px 5px 5px;" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown" href="#"><img style="width:24px; height:24px" src="" />
+                    <a style="padding:5px 10px 5px 5px;" class="dropdown-toggle" data-hover="dropdown" data-toggle="dropdown" href="#"><img style="width:24px; height:24px" src="{$visitor.avatar}" />
                     <b class="caret"></b> </a>
                       <ul class="dropdown-menu">
                         <li class="nav-header">{$visitor.username}</li>
