--- a/APP/Tpl/footer.html
+++ b/APP/Tpl/footer.html
@@ -96,7 +96,7 @@
     <h3>分享视频</h3>
   </div>
   <div class="modal-body">
-    <form action="/ajax/post.php" id="shareVideoFront" method="POST" >
+    <form action="{:U('Index/Post/addvideo')}" id="shareVideoFront" method="POST" >
         <div class="modal-body">
             <div class="control-group" id="urlgroup">
             <input type="text" name="url" id="url" class="input-block-level share-video" placeholder="请输入你想要分享的视频页面地址"/>
