--- a/APP/Tpl/header.html
+++ b/APP/Tpl/header.html
@@ -56,10 +56,10 @@
                     <b class="caret"></b> </a>
                       <ul class="dropdown-menu">
                         <li class="nav-header">{$visitor.username}</li>
-                        <li><a href="/home/videos/"><i class="icon-film"></i> 我分享的</a></li>
-                        <li><a href="/home/likes/"><i class="icon-heart"></i> 我收藏的</a></li>
-                        <li><a href="/home/following/"><i class="icon-star"></i> 我关注的</a></li>
-                        <li><a href="/home/settings/"><i class="icon-cog"></i> 修改资料</a></li>
+                        <li><a href="/home/video/"><i class="icon-film"></i> 我分享的</a></li>
+                        <li><a href="/home/like/"><i class="icon-heart"></i> 我收藏的</a></li>
+                        <li><a href="/home/follow/"><i class="icon-star"></i> 我关注的</a></li>
+                        <li><a href="/home/setting/"><i class="icon-cog"></i> 修改资料</a></li>
                         <li><a href="{:U('User/Member/Logout')}"><i class="icon-off"></i> 退出</a></li>
                       </ul>
 				</li>
