--- a/APP/Modules/User/Tpl/Public/headerbar.html
+++ b/APP/Modules/User/Tpl/Public/headerbar.html
@@ -38,7 +38,7 @@
 <div class="span3" style="height:90px; width:225px;padding-left:10px; border-left:#D3D3D3 dotted 1px">
     <div class="user-detail-title" style="margin-top:5px">Status</div>
     <div style="margin-top: 5px; line-height: 20px; font-size: 14px; color: #848484">
-        被访问了{$user.viewed}次，共有{$user.postOriginal}部创作，{$user[post] - $user[postOriginal]}部分享，{$user.like}部收藏
+        被访问了{$user.viewed}次，共有{$user.postOriginal}部创作，{$user[post] - $user[postOriginal]}部分享，{$user.likecount}部收藏
     </div>
 </div>
 
