--- a/APP/Tpl/header.html
+++ b/APP/Tpl/header.html
@@ -59,6 +59,7 @@
                         <li><a href="/home/video/"><i class="icon-film"></i> 我分享的</a></li>
                         <li><a href="/home/like/"><i class="icon-heart"></i> 我收藏的</a></li>
                         <li><a href="/home/follow/"><i class="icon-star"></i> 我关注的</a></li>
+                        <li><a href="/home/message/"><i class="icon-envelope"></i> 站内信息</a></li>
                         <li><a href="/home/setting/"><i class="icon-cog"></i> 修改资料</a></li>
                         <li><a href="{:U('User/Member/Logout')}"><i class="icon-off"></i> 退出</a></li>
                       </ul>
