--- a/APP/Modules/User/Tpl/Index/message.html
+++ b/APP/Modules/User/Tpl/Index/message.html
@@ -14,9 +14,10 @@
               <thead>
                 <tr>
                   <th width="5%">#</th>
-                  <th width="55%">信件标题</th>
-                  <th width="20%">发信人</th>
+                  <th width="50%">信件标题</th>
+                  <th width="15%">发信人</th>
                   <th width="20%">发信时间</th>
+                  <th width="10%">操作(测试用)</th>
                 </tr>
               </thead>
               <tbody>
@@ -34,9 +35,9 @@
                   </td>
                   <td>{$m.fromname}</td>
                   <td>{$m.creatTime|date="Y年 n月 d日 H:i",###}</td>
+				  <td><a href="#" style="color:#333" onClick="UnreadMessage('{$m.id}')" >标为未读</span></a>
                 </tr>
               </foreach>
-
               </tbody>
             </table>
 		</div>
