--- a/APP/Tpl/header.html
+++ b/APP/Tpl/header.html
@@ -11,17 +11,15 @@
     <meta name="description" content="AIMOZHEN 艾墨镇 分享动画 分享精彩">
     <meta name="author" content="艾墨镇,aimozhen">
     <meta name="keywords" content="aimozhen,艾墨镇,动画,animetaste,独立动画,视频,微电影,V电影,短片,原创,animation,动漫"/>
-    <meta property="wb:webmaster" content="dbd6a845d21f945c"/>
-    <link rel="shortcut icon" href="__PUBLIC__/favicon.ico">
+    <link rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
     <!-- CSS -->
-    <link href="__PUBLIC__/media/css/bootstrap.min.css?t=20130724" rel="stylesheet">
-    <link href="__PUBLIC__/media/css/bootstrap-responsive.min.css?t=20130724" rel="stylesheet">
-    <link href="http://amzstatic.b0.upaiyun.com/media/css/bootstrap-editable.css" rel="stylesheet">
+    <link href="__PUBLIC__/media/css/bootstrap-all.min.css?t=20130724" rel="stylesheet">
+    <link href="__PUBLIC__/media/css/style.min.css?t=20130724" rel="stylesheet">
     
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <link href="__PUBLIC__/media/css/bootstrap-ie.css" rel="stylesheet">
+    <link href="__PUBLIC__/media/css/bootstrap-ie.min.css" rel="stylesheet">
     <![endif]-->
     
     <script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
