--- a/APP/Modules/User/Tpl/Member/register.html
+++ b/APP/Modules/User/Tpl/Member/register.html
@@ -16,25 +16,25 @@
 		  <input type="hidden" name="hidden" value="{$regemail|md5}" />
 					<div class="control-group" id="namegroup">
 						<label class="control-label2" for="name">昵称 </label>
-						<div class="controls2">
+						<div class="controls2 my-input">
 							<input type="text" class="input-xlarge" id="name" name="name" placeholder="好名字是好生活的开始~">
 							 <span class="help-inline" id="nameInfo"></span>
 						</div>
 					</div>
-					<div class="control-group">
+					<div class="control-group my-input">
 						<label class="control-label2" for="input01">Email </label>
 						<div class="controls2">
 							<input class="input-xlarge" id="email" name="email" type="text" readonly value="{$regemail}" />
 						</div>
 					</div>
-					<div class="control-group" id="pass1group">
+					<div class="control-group my-input" id="pass1group">
 						<label class="control-label2" for="pass1">密码 </label>
 						<div class="controls2">
 							<input class="input-xlarge" type="password" id="pass1" name="pass1" />
 							<span class="help-inline" id="pass1Info"></span>
 						</div>
 					</div>
-					<div class="control-group" id="pass2group">
+					<div class="control-group my-input" id="pass2group">
 						<label class="control-label2" for="pass2">重复 </label>
 						<div class="controls2">
 							<input class="input-xlarge" type="password" id="pass2" name='pass2' />
@@ -46,7 +46,7 @@
 			<span style="color: #7F7F7F; font-weight: bold;">如果有邀请码请填写在下方（选填）</span>
 			<div class="hr2"></div>
 		  </div>
-					<div class="control-group">
+					<div class="control-group my-input">
 						<label class="control-label2" for="input01">邀请 </label>
 						<div class="controls2">
 							<input class="input-xlarge" id="invitecode" name="invitecode" type="text" />
