--- a/APP/Modules/Admin/Tpl/Public/footer.html
+++ b/APP/Modules/Admin/Tpl/Public/footer.html
@@ -13,16 +13,13 @@
 -->
 
     <!-- javascript ================================================== -->
-    <script src="__PUBLIC__/media/js/bootstrap.min.js?t=20130816"></script>
-    <script src="__PUBLIC__/media/js/amz.js?t=201308162"></script>
-    <script src="http://amzstatic.b0.upaiyun.com/media/js/bootstrap-editable.min.js"></script>
-	<script type="text/javascript" src="__PUBLIC__/media/messenger/js/underscore-min.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/media/messenger/js/backbone-min.js"></script>
-	<script type="text/javascript" src="__PUBLIC__/media/messenger/js/messenger.min.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/media/messenger/js/messenger-theme-future.js"></script>
+	<script src="__PUBLIC__/media/js/bootstrap.min.js?t=20130824"></script>
+    <script src="__PUBLIC__/media/js/amz.js?t=20130818"></script>
     
-	<link type="text/css" rel="stylesheet" href="__PUBLIC__/media/messenger/css/messenger.css"/>
-    <link type="text/css" rel="stylesheet" href="__PUBLIC__/media/messenger/css/messenger-theme-future.css"/>
+	<script type="text/javascript" src="http://libs.baidu.com/underscore/1.3.3/underscore-min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/backbone/0.9.2/backbone-min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/media/addons/messenger/messenger-in-future.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="__PUBLIC__/media/addons/messenger/messenger-in-future.min.css"/>
 
     <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=652974" ></script>
 	<script type="text/javascript" id="bdshell_js"></script>
@@ -76,18 +73,19 @@
     <h3>找回密码</h3>
   </div>
     <div class="modal-body">
-    <form action="/ajax/forget/validate.php" method="POST">
+    <form action="{:U('Admin/Mail/lostPassword')}" method="POST">
         <div class="modal-body">
    		  <p>请填写用来登录的邮件地址 我们将向你发送一份身份确认邮件<br />
 			<span style="font-size: 80%">如果提交多次仍没有收到邮件请与我们联系 admin@aimozhen.com</span></p>
 			<input type="text" name="email" placeholder="电子邮件地址"/> <br />
-            <input type="submit" value="确认" class="btn btn-red"/>
+            <input type="submit" data-loading-text="Loading..." value="确认" class="btn btn-red"/>
         </div>
     </form>
     </div>
 </div>
 
 <div id="shareFront" class="modal hide fade" tabindex="-1" role="dialog" aria-hidden="true">
+<if condition="!$visitor[guest]">
   <div class="modal-header">
     <button type="button" class="close" style="color: #FFFFFF" aria-hidden="true" data-dismiss="modal">×</button>
     <h3>分享视频</h3>
@@ -105,10 +103,28 @@
         </div>
     </form>
     <script type="text/javascript"> $(function(){ vShareVideoFront(); vRegFormFront();}); </script>
-    
-  </div></div>  
+  </div>
   
+<else / >
+
+  <div class="modal-header">
+    <button type="button" class="close" style="color: #FFFFFF" aria-hidden="true" data-dismiss="modal">×</button>
+    <h3>内侧申请</h3>
+  </div>
+  <div class="modal-body">
+		<div class="control-group" id="urlgroup">
+			<div style="font-size: 14px; color: #666666; margin: 10px 0 20px 0;"><strong>我们期待精彩的分享，所以目前只有通过内测邀请的用户才能分享哦，如果你也愿意和大家一起分享，请点击下面按钮<br /><br />
+			<a role="button" class="btn btn-block btn-red" style="height:30px;width:90px;" href="/page/register/">申请内测</a></strong><br /></div>
+		</div>
+  </div>
+</if>
+</div>  
   
+ 
+<if condition="$visitor[message]">
+<script type="text/javascript"> $(function(){ messageinfo( 1,"{$visitor.message}" ); }); </script>
+</if>
+ 
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F0123a2f162a7829ef691d1b9702258e3' type='text/javascript'%3E%3C/script%3E"));
