--- a/APP/Tpl/footer.html
+++ b/APP/Tpl/footer.html
@@ -13,13 +13,13 @@
 -->
 
     <!-- javascript ================================================== -->
-	<script src="__PUBLIC__/media/js/bootstrap.min.js?t=20130828"></script>
+	<script src="http://static.aimozhen.com/Public/media/js/bootstrap.min.js?t=20130824"></script>
     <script src="__PUBLIC__/media/js/amz.js?t=20130818"></script>
     
 	<script type="text/javascript" src="http://libs.baidu.com/underscore/1.3.3/underscore-min.js"></script>
     <script type="text/javascript" src="http://libs.baidu.com/backbone/0.9.2/backbone-min.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/media/addons/messenger/messenger-in-future.min.js"></script>
-    <link type="text/css" rel="stylesheet" href="__PUBLIC__/media/addons/messenger/messenger-in-future.min.css"/>
+    <script type="text/javascript" src="http://static.aimozhen.com/Public/media/addons/messenger/messenger-in-future.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="http://static.aimozhen.com/Public/media/addons/messenger/messenger-in-future.min.css"/>
 
     <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=652974" ></script>
 	<script type="text/javascript" id="bdshell_js"></script>
@@ -39,7 +39,7 @@
     <div class="modal-body">
     <form action="{:U('User/Member/FrontLoginVerify')}" method="POST">
         <div class="modal-body">
-				邮件&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="email" /> &nbsp;&nbsp; <a href="#reg" data-toggle="modal" style="font-size:80%">没有账号？</a> <br />
+				邮件&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="email" /> &nbsp;&nbsp; <a href="#regFront" data-toggle="modal" style="font-size:80%">没有账号？</a> <br />
 				密码&nbsp;&nbsp;&nbsp;&nbsp;<input type="password" name="password" /> &nbsp;&nbsp; <a href="#forget" data-toggle="modal" style="font-size:80%">找回密码</a> <br /></div>
             &nbsp;&nbsp;<input type="submit" value="登录" class="btn btn-red"/>
         </div>
@@ -73,12 +73,12 @@
     <h3>找回密码</h3>
   </div>
     <div class="modal-body">
-    <form action="/ajax/forget/validate.php" method="POST">
+    <form action="{:U('Admin/Mail/lostPassword')}" method="POST">
         <div class="modal-body">
    		  <p>请填写用来登录的邮件地址 我们将向你发送一份身份确认邮件<br />
 			<span style="font-size: 80%">如果提交多次仍没有收到邮件请与我们联系 admin@aimozhen.com</span></p>
 			<input type="text" name="email" placeholder="电子邮件地址"/> <br />
-            <input type="submit" value="确认" class="btn btn-red"/>
+            <input type="submit" data-loading-text="Loading..." value="确认" class="btn btn-red"/>
         </div>
     </form>
     </div>
